fixed text spacing

--- a/less/partials/header.less
+++ b/less/partials/header.less
@@ -73,9 +73,9 @@ ul {
     text-decoration: underline;
   }
   li {
+    margin: -10px 0;
     @media @portrait {
       display: inline-block;
     }
   }
 }
-
