--- a/less/partials/section--info.less
+++ b/less/partials/section--info.less
@@ -2,6 +2,14 @@
   padding: 0;
 }
 
+.reg-text {
+  margin: 0 auto;
+}
+
+.space-text {
+  margin: 50px 0 0 0;
+}
+
 /* INFO SECTION */
 .sponsors {
   display: flex;
@@ -15,12 +23,10 @@
   }
 
   .buhai { height: .9em }
-  .austere { height: 1.3em }
+  .austere { height: 1.3em; }
   .yola { height: 2.3em }
   .roandco { height: .9em }
   .human { height: .8em }
   .material-vodka { height: 1.5em }
   .proof-bakery { height: 6em }
 }
-
-
